# Autonomus-business-agent

./: .env.example  Dockerfile  GEMINI.md  README.md  pyproject.toml  requirements.txt  ui.py
app/: config.py  executor.py  logger.py  main.py  planner.py  state.py
app/tools/: email_tool.py  web_search.py
logs/: history.json
