[project]
name = "autonomous-business-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cohere>=7.0.0",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "tavily-python>=0.5.0",
]
